2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c: fixed the build for compilers that
	don't support C99 extensions.

2005-02-16  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: Added constants MIN-IMAGE-SIZE,
	MAX-IMAGE-SIZE, MIN-RESOLUTION, and MAX-RESOLUTION for use in Script-Fu
	scripts. See comment #4 in bug #167529.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	* libgimpwidgets/gimpintcombobox.c: set the "ellipsize" property
	on the text cell-renderer. Not sure if it's a good idea to
	hardcode this for GimpIntComboBox, but let's give it a try. Fixes
	bug #136676.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimp-help-lookup.c: use GOptionContext to parse
	the command-line.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-processor.c: switched to using a thread pool.
	Enables the progress callback for the threaded case.

2005-02-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/plug-ins/script-fu/scripts/guides-new.scm:  committted
	slightly modified patch from  Joao S. O. Bueno Calligaris
	to raise guide position limit to 262144.
	
2005-02-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpclonetool.[ch]: make sure clone source is
	shown in correct display, fixes bug #167002.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-processor.[ch]: added a variant of
	pixel_regions_process_parallel() that takes a progress callback and
	progress data. Does only work for the single-threaded case yet.

	* app/core/gimpdrawable-blend.c (gradient_fill_region): parallelized.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-contiguous-region.c
	(gimp_image_contiguous_region_by_color): parallelized.

	* app/core/gimpdrawable-desaturate.c (gimp_drawable_desaturate):
	parallelized.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimplayer.c (gimp_layer_transform_color): code cleanup.
